--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -1,13 +1,16 @@
+/* about container design  */
 .about-container {
   background-color: #b8dde3;
   padding: 10rem;
 }
+/* about section main container design  */
 .about-section-container {
   padding: 20px;
   min-height: 500px;
   justify-content: center;
   align-items: center;
 }
+/* about section image width control and design  */
 .about-section-container img {
   width: 600px;
   padding: 10px;
