--- a/src/Components/Teacher/Teacher.css
+++ b/src/Components/Teacher/Teacher.css
@@ -1,17 +1,22 @@
+/* teacher image design  */
 .teacher-img {
   border-radius: 70% 30% 67% 33%/30% 70% 30% 70% !important;
 }
+/* teacher card design  */
 .teacher-card {
   border: none;
 }
+/* icon tag design  */
 .intro i {
   font-size: 25px;
   margin: 10px 5px;
   cursor: pointer;
 }
+/* facebook incon design  */
 .fa-facebook {
   color: #077ae9;
 }
+/* twitter Icon design  */
 .fa-twitter {
   color: #0f9afb;
 }
