--- a/src/Components/Teacher/Teacher.css
+++ b/src/Components/Teacher/Teacher.css
@@ -1,6 +1,6 @@
 /* teacher image design  */
 .teacher-img {
-  border-radius: 70% 30% 67% 33%/30% 70% 30% 70% !important;
+  /* border-radius: 70% 30% 67% 33%/30% 70% 30% 70% !important; */
 }
 /* teacher card design  */
 .teacher-card {
