--- a/src/Components/Teacher/Teacher.css
+++ b/src/Components/Teacher/Teacher.css
@@ -1,10 +1,7 @@
-/* teacher image design  */
-.teacher-img {
-  /* border-radius: 70% 30% 67% 33%/30% 70% 30% 70% !important; */
-}
 /* teacher card design  */
 .teacher-card {
   border: none;
+  box-shadow: 0px 10px 10px 10px #ddd;
 }
 /* icon tag design  */
 .intro i {
