--- a/src/Components/IntroSection/IntroSection.css
+++ b/src/Components/IntroSection/IntroSection.css
@@ -9,6 +9,8 @@ img {
   align-items: center;
   margin-top: 100px;
   margin-bottom: 100px;
+  flex-direction: column-reverse;
+  flex-wrap: wrap;
 }
 
 /* course details  */
