--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -3,12 +3,7 @@
   background-color: #b8dde3;
   padding: 10rem;
 }
-/* about section  */
-.about {
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-}
+
 .about img {
   margin-top: 3rem;
 }
@@ -23,4 +18,17 @@
 .about-section-container img {
   width: 600px;
   padding: 10px;
+}
+
+@media only screen and (max-width: 700px) {
+  /* about section  */
+  .about {
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+  .about img {
+    width: 400px;
+    text-align: center;
+  }
 }
