--- a/src/Components/IntroSection/IntroSection.css
+++ b/src/Components/IntroSection/IntroSection.css
@@ -9,11 +9,15 @@ img {
   align-items: center;
   margin-top: 100px;
   margin-bottom: 100px;
-  flex-direction: column-reverse;
-  flex-wrap: wrap;
 }
-
 /* course details  */
 .course-support {
   color: #9370db;
+}
+
+@media screen and (max-width: 700px) {
+  .intro-section-container {
+    flex-direction: column-reverse;
+    flex-wrap: wrap;
+  }
 }
