--- a/src/Components/LoginOrRegis/LoginOrRegis.css
+++ b/src/Components/LoginOrRegis/LoginOrRegis.css
@@ -16,6 +16,9 @@ button {
   font-size: 20px;
   border-radius: 1rem;
 }
+.login-container {
+  min-height: 100vh;
+}
 /* responsive design  */
 @media screen and (max-width: 668px) {
   .login-container {
